# gen/http/task/server/server.go
@@ -20,7 +20,6 @@ import (
 type Server struct {
 	Mounts []*MountPoint
 	List   http.Handler
-	Show   http.Handler
 }
 
 // MountPoint holds information about the mounted endpoints.
@@ -51,10 +50,8 @@ func New(
 	return &Server{
 		Mounts: []*MountPoint{
 			{"List", "GET", "/tasks"},
-			{"Show", "GET", "/tasks/{id}"},
 		},
 		List: NewListHandler(e.List, mux, decoder, encoder, errhandler, formatter),
-		Show: NewShowHandler(e.Show, mux, decoder, encoder, errhandler, formatter),
 	}
 }
 
@@ -64,7 +61,6 @@ func (s *Server) Service() string { return "task" }
 // Use wraps the server handlers with the given middleware.
 func (s *Server) Use(m func(http.Handler) http.Handler) {
 	s.List = m(s.List)
-	s.Show = m(s.Show)
 }
 
 // MethodNames returns the methods served.
@@ -73,7 +69,6 @@ func (s *Server) MethodNames() []string { return task.MethodNames[:] }
 // Mount configures the mux to serve the task endpoints.
 func Mount(mux goahttp.Muxer, h *Server) {
 	MountListHandler(mux, h.List)
-	MountShowHandler(mux, h.Show)
 }
 
 // Mount configures the mux to serve the task endpoints.
@@ -111,57 +106,6 @@ func NewListHandler(
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
 		ctx = context.WithValue(ctx, goa.MethodKey, "list")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "task")
-		payload, err := decodeRequest(r)
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil {
-				errhandler(ctx, w, err)
-			}
-			return
-		}
-		res, err := endpoint(ctx, payload)
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil {
-				errhandler(ctx, w, err)
-			}
-			return
-		}
-		if err := encodeResponse(ctx, w, res); err != nil {
-			errhandler(ctx, w, err)
-		}
-	})
-}
-
-// MountShowHandler configures the mux to serve the "task" service "show"
-// endpoint.
-func MountShowHandler(mux goahttp.Muxer, h http.Handler) {
-	f, ok := h.(http.HandlerFunc)
-	if !ok {
-		f = func(w http.ResponseWriter, r *http.Request) {
-			h.ServeHTTP(w, r)
-		}
-	}
-	mux.Handle("GET", "/tasks/{id}", f)
-}
-
-// NewShowHandler creates a HTTP handler which loads the HTTP request and calls
-// the "task" service "show" endpoint.
-func NewShowHandler(
-	endpoint goa.Endpoint,
-	mux goahttp.Muxer,
-	decoder func(*http.Request) goahttp.Decoder,
-	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
-	errhandler func(context.Context, http.ResponseWriter, error),
-	formatter func(ctx context.Context, err error) goahttp.Statuser,
-) http.Handler {
-	var (
-		decodeRequest  = DecodeShowRequest(mux, decoder)
-		encodeResponse = EncodeShowResponse(encoder)
-		encodeError    = goahttp.ErrorEncoder(encoder, formatter)
-	)
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
-		ctx = context.WithValue(ctx, goa.MethodKey, "show")
 		ctx = context.WithValue(ctx, goa.ServiceKey, "task")
 		payload, err := decodeRequest(r)
 		if err != nil {
